--- a/Warrior/Config/DefaultEngine.ini
+++ b/Warrior/Config/DefaultEngine.ini
@@ -75,3 +75,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategoryRowPrevKey=L
+CategoryRowNextKey=M
+
