--- a/Warrior/Config/DefaultGame.ini
+++ b/Warrior/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+bUseDebugTargetFromHud = true
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9C42C13D4717DE35A47C4AB81C13CCE0
